<?xml version="1.0"?>
<package>
  <name>motors_driver</name>
  <version>0.0.0</version>
  <description>Low level I2C communication between Odroid and the motors</description>

  <maintainer email="d.a.zervas@gmail.com">Zervas Dimitris</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="d.a.zervas@gmail.com">Zervas Dimitris</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
